k3s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-website
spec:
  selector:
    matchLabels:
      app: test-website
  template:
    metadata:
      labels:
        app: test-website
    spec:
      containers:
      - name: test-website
        image: k8s-harbor.register.com/test-website/test-website:latest
      imagePullSecrets:
      - name: harbor-registry
