k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-website
spec:
  selector:
    app: test-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
